[gd_scene load_steps=5 format=3 uid="uid://depepl1v8nadl"]

[ext_resource type="Script" uid="uid://cdnavx8b63w6f" path="res://scenes/select_class.gd" id="1_fiono"]
[ext_resource type="FontFile" uid="uid://crx6hep6niu0h" path="res://Mystfont-Regular.ttf" id="2_0lhwu"]
[ext_resource type="StyleBox" uid="uid://ba2bwua03esue" path="res://buttons/buttonhover.tres" id="3_0qyep"]
[ext_resource type="StyleBox" uid="uid://55lry02uaqka" path="res://buttons/buttonnormal.tres" id="4_ewbj8"]

[node name="SelectRace" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fiono")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 228.0
offset_top = -147.0
offset_right = 539.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Warrior" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0lhwu")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_0qyep")
theme_override_styles/pressed = ExtResource("3_0qyep")
theme_override_styles/normal = ExtResource("4_ewbj8")
text = "WARRIOR"

[node name="Mage" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0lhwu")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_0qyep")
theme_override_styles/pressed = ExtResource("3_0qyep")
theme_override_styles/normal = ExtResource("4_ewbj8")
text = "MAGE"

[node name="Ranger" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0lhwu")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_0qyep")
theme_override_styles/pressed = ExtResource("3_0qyep")
theme_override_styles/normal = ExtResource("4_ewbj8")
text = "RANGER"

[node name="Assassin" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_0lhwu")
theme_override_font_sizes/font_size = 55
theme_override_styles/hover = ExtResource("3_0qyep")
theme_override_styles/pressed = ExtResource("3_0qyep")
theme_override_styles/normal = ExtResource("4_ewbj8")
text = "ASSASSIN"

[connection signal="pressed" from="VBoxContainer/Warrior" to="." method="_on_warrior_pressed"]
[connection signal="pressed" from="VBoxContainer/Mage" to="." method="_on_mage_pressed"]
[connection signal="pressed" from="VBoxContainer/Ranger" to="." method="_on_ranger_pressed"]
[connection signal="pressed" from="VBoxContainer/Assassin" to="." method="_on_assassin_pressed"]
