extends Control


func _on_warrior_pressed() -> void:
	pass # Replace with function body.


func _on_mage_pressed() -> void:
	pass # Replace with function body.


func _on_ranger_pressed() -> void:
	pass # Replace with function body.


func _on_assassin_pressed() -> void:
	pass # Replace with function body.
